--- a/frontend/templates/main.html
+++ b/frontend/templates/main.html
@@ -5,8 +5,9 @@
 {% endblock %}
 
 {% block content %}
-    <img src="{{ url_for('media', path='ages.png') }}" alt="Возраст отреагировавших" style="float: left; width: 25%;">
-    <img src="{{ url_for('media', path='sex.png') }}" alt="Пол отреагировавших" style="float: left; width: 25%;">
-    <img src="{{ url_for('media', path='cities.png') }}" alt="Город отреагировавших" style="float: left; width: 25%;">
-    <img src="{{ url_for('media', path='countries.png') }}" alt="Страна отреагировавших" style="float: left; width: 25%;">
+<div style="display: flex; justify-content: center; align-items: center;">
+    {% for category in categories %}
+    <img src="{{ url_for('media', path=category) }}" style="float: left; width: 25%;">
+    {% endfor %}
+</div>
 {% endblock %}
