--- a/frontend/templates/search.html
+++ b/frontend/templates/search.html
@@ -14,19 +14,19 @@
         <div style="border: 1px solid black; width: 250px;">
             <div style="float: left; margin-right: 20px; margin-bottom: 10px;">
                 <p>Пол</p>
-                <input type="checkbox", name="sex_checkbox">
+                <input type="checkbox", name="sex">
             </div>
             <div style="float: left; margin-right: 20px; margin-bottom: 10px;">
                 <p>Город</p>
-                <input type="checkbox", name="city_checkbox">
+                <input type="checkbox", name="city">
             </div>
             <div style="float: left; margin-right: 20px; margin-bottom: 10px;">
                 <p>Возраст</p>
-                <input type="checkbox", name="age_checkbox">
+                <input type="checkbox", name="age">
             </div>
             <div style="margin-right: 20px; margin-bottom: 10px;">
                 <p>Страна</p>
-                <input type="checkbox", name="country_checkbox">
+                <input type="checkbox", name="country">
             </div>
         </div>
         <button style="margin-top: 20px;">Submit</button>
